sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:5: error: not found: value estPlusPetit
  if (!estPlusPetit(0,1)) {
       ^AlgGnomeSort:9: error: not found: value estPlusPetit
    if (!estPlusPetit(position + 1, position + 2)) {
         ^