sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  val lgr = getNombreValeurs()
  var position = 0
  if (!estPlusPetit(0,1)) {
    echange(0,1)
  }
  while (position <= lgr - 2) {
    if (!estPlusPetit(position + 1, position + 2)) {
      echange(position+1,position+2)
      position = position - 1
    }
    else {
      position = position + 1
    }
  }
}